--- a/clients.html
+++ b/clients.html
@@ -87,31 +87,36 @@
 			<section class="content">
 				
 
-				<div class="clients">
+				<div class="post__list">
 
-					<div class="item">
+					<div class="post post__padding">
 						<h3><a href="#">Ресурсный центр по созданию ОСМД</a></h3>
-						<article>
+						<div class="clearfix">
 							<figure>
 								<img src="assets/images/clients.jpg" alt="">
 							</figure>
-							<div>									
-								Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.<br/><br/>
-								Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. 
-							</div>
-						</article>
+							<article>
+								<div class="descr">
+									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.<br/><br/>
+									Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores 
+								</div>	
+							</article>
+						</div>						
 					</div>
 
-					<div class="item">
-						<h3><a href="#">Энергосбережение</a></h3>
-						<article>
+					<div class="post post__padding">
+						<h3><a href="#">Ресурсный центр по созданию ОСМД</a></h3>
+						<div class="clearfix">
 							<figure>
 								<img src="assets/images/clients.jpg" alt="">
 							</figure>
-							<div>									
-								Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-							</div>
-						</article>
+							<article>
+								<div class="descr">
+									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.<br/><br/>
+									Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores 
+								</div>	
+							</article>
+						</div>						
 					</div>
 
 				</div>
