--- a/contacts.html
+++ b/contacts.html
@@ -91,7 +91,7 @@
 					<div class="item__list">
 						<div class="item">
 							<figure>
-								<span></span>
+								<img src="assets/images/ava.jpg" alt="">
 							</figure>
 							<div class="descr">
 								<span>Михаил Роганов</span>
@@ -100,7 +100,7 @@
 						</div>
 						<div class="item">
 							<figure>
-								<span></span>
+								<img src="assets/images/ava.jpg" alt="">
 							</figure>
 							<div class="descr">
 								<span>Михаил Роганов</span>
@@ -109,7 +109,7 @@
 						</div>
 						<div class="item">
 							<figure>
-								<span></span>
+								<img src="assets/images/ava.jpg" alt="">
 							</figure>
 							<div class="descr">
 								<span>Михаил Роганов</span>
